--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -90,18 +90,18 @@ The structure of the paradigm provides the opportunity for participants' experie
 
 ## Trait character of SVs
 
-Knowing whether SVs of ER strategies show a trait character would allow to further evaluate their practical relevance and predictive power.
-With the data of the present study, a trait analysis is not possible, because the SVs of the ER strategies were assessed in just one situation at just one time point, which by definition represents a state.
-A habit would imply consistency of SVs across time points in similar situations, while a trait would imply consistency across both time points and situations.
+Knowing whether the SVs of ER strategies have a trait character would allow to further evaluation of their practical relevance and predictive power.
+With the data of the present study, a trait analysis is not possible, because the SVs of the ER strategies were assessed in only one situation at only one time point, which by definition represents a state.
+A habit would imply consistency of SVs across time points in similar situations, whereas a trait would imply consistency across both time points and situations.
 As noted above, ER choice behaviour is rather state-like, because it is influenced by personal regulatory goals, situational factors, and contextual demands [@Aldao2015;@Bonanno2013@Sheppes2011;@Scheffel2021;@Haines2016].
-We therefore believe that the impact of these factors on ER behaviour translates into state- or habit-like properties of SVs as well.
-Such factors could be varied systematically in order to shed light on the stability of SVs, e.g by manipulating situational factors like stimulus intensity, or by systematically assessing the goals that participants pursue with their ER behaviour.
+We therefore believe that the influence of these factors on ER behaviour will also translates into state- or habit-like properties of SVs.
+Such factors could be varied systematically in order to shed light on the stability of SVs, e.g. by manipulating situational factors such as stimulus intensity, or by systematically assessing the goals that participants pursue with their ER behaviour.
 As Wilms and colleagues[-@Wilms2020] pointed out, situational factors and ER goals are state-like themselves, because they vary greatly across time points and situations.
-While participants in the lab mainly pursue hedonic but not social goals[@Tamir2016], a real-life situation with social goals will probably not only change their ER behaviour but also the SVs that they assign to different strategies, especially when their choice options are not limited by the experimental design (see also [Limitations](#Limitations)).
-To investigate whether SVs of ER strategies can be conceptualized as states, habits, or traits, one could employ latent state trait modelling, as recently done by our group in a related context[@Strobel2020].
+While participants in the lab mainly pursue hedonic but not social goals[@Tamir2016], a real-life situation with social goals is likely to change not only their ER behaviour but also the SVs they assign to different strategies, especially when their choice options are not restricted by the experimental design (see also [Limitations](#Limitations)).
+To investigate whether the SVs of ER strategies can be conceptualised as states, habits, or traits, one could employ latent state trait modelling, as recently done by our group in a related context[@Strobel2020].
 A systematic (non-)variation of situational factors and the assessment of personal factors, e.g. ER goals, can then help to disentangle time- and situation-specific variance in SVs.
-Importantly, the practical relevance and predictive power of SVs should be assessed at every measurement, because it is entirely possible that the correlation between SVs and ER choice is situation-specific as well.
-Such findings would not only yield important insights into ER behaviour, but allow investigations into the association of ER behaviour with external criteria as well, such as well-being[@GrossJohn2003].
+Importantly, the practical relevance and predictive power of SVs should be assessed at every measurement, as it is quite possible that the correlation between SVs and ER choice is situation-specific as well.
+Such findings would not only provide important insights into ER behaviour, but allow investigations into the association of ER behaviour with external criteria as well, such as well-being[@GrossJohn2003].
 
 ## Limitations
 
