--- a/06_Paper/ER-ED/ERED_Stage2/method.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/method.Rmd
@@ -186,7 +186,7 @@ To investigate the effects of the three ER strategies on subjective arousal (H2a
 To examine the effects of the three ER strategies on physiological responding (H3a and H3b), another rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for EMG *corrugator* and *levator* activity was conducted.
 To examine the effect of ER strategies on subjective effort (H4a), a rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective effort ratings was conducted.
 
-*Subjective values of emotion regulation strategies.* <br> For each ER strategy, SVs were calculated as follows: first, the SV of the flexible strategy was set to 1, because in the first comparison of each pairing where the same value was offered for both strategies, so the flexible strategy was the preferred strategy in each pairing.
+*Subjective values of emotion regulation strategies.* <br> For each ER strategy, SVs were calculated as follows: first, the SV of the flexible strategy was set to 1, because that strategy was preferred when equal rewards were offered.
 Second, to obtain the SV of the fixed strategy (the minimum relative reward required for participants to choose the flexible strategy over the fixed strategy), the value 0.02€ was added to or subtracted from the last monetary value of the flexible strategy, depending on the participant's last choice.
 The resulting value of the flexible strategy was divided by 2€.
 This yielded an SV of the fixed strategy between 0 and 1, with values closer to 0 indicating a stronger aversion to the fixed strategy compared to the flexible strategy.
