--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -687,7 +687,6 @@ https://www.nature.com/articles/nn2007.pdf},
    year = {2020}
 }
 
-
 @Article{Kuznetsova2017,
    title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
    author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B.
@@ -771,7 +770,7 @@ https://journals.sagepub.com/doi/pdf/10.1111/j.1467-9280.2007.01916.x},
 @article{Murphy2018,
    author = {Murphy, J. W. and Young, M. A.},
    title = {Dynamic processes in emotion regulation choice},
-   journal = {Cognition & Emotion},
+   journal = {Cognition \& Emotion},
    volume = {32},
    number = {8},
    pages = {1654-1662},
