--- a/06_Paper/COG-ED/Stage 2/Supplement.Rmd
+++ b/06_Paper/COG-ED/Stage 2/Supplement.Rmd
@@ -39,6 +39,11 @@ author:
     role:
       - Formal analysis
       - Writing - review & editing
+  - name          : "Georgia Clay"
+    orcid         : "0000-0001-5641-6804"
+    affiliation   : "2"
+    role:
+      - Formal analysis
   - name          : "Alexander Strobel"
     orcid         : "0000-0002-9426-5397"
     affiliation   : "1"
@@ -51,6 +56,8 @@ author:
 affiliation:
   - id            : "1"
     institution   : "Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany"
+  - id            : "2"
+    institution   : "Faculty of Psychology, University of Vienna, Vienna 1010, Austria"
 keywords          : "effort discounting, registered report, specification curve analysis, need for cognition, $n$-back"
 bibliography      : CAD.bib
 floatsintext      : yes
